--- a/index.html
+++ b/index.html
@@ -6,34 +6,45 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div class="survey">
     <main>
       <h1 id="title">Ardens Christmas Party</h1>
-      <p id="description">Please insert the information required below:</p>
+      <p id="description" class="description">Please insert the information required below</p>
       <form id="survey-form">
         <fieldset>
-        <label for="name-label">Enter your name: <input id="name" type="text" required />
-        <label for="email-label">Enter your email: <input id="email" name="email" type="email" required />
-        <label for="number-label">Enter your phone number: <input id="number" name="number" type="text" min="10" max="10">
-        <p id="attandance">Do you have any food allergies?</p>
-        <select id="dropdown" name="dropdown">
+          <div class="form-group">
+        <label id="name-label">Name</label><input id="name" class="box" type="text" placeholder="Enter your name" required />
+        </div>
+        <div class="form-group">
+        <label id="email-label">Email address </label><input id="email" name="email" class="box" type="email" placeholder="Enter your email" required />
+        </div>
+        <div class="form-group">
+        <label id="number-label">Phone number (optional) </label><input id="number" name="number" class="box" type="number" min="10" max="10" placeholder="Enter your phone number">
+        </div>
+          </fieldset>
+          <fieldset>
+        <label for="dropdown" id="attandance">Do you have any food allergies?</label>
+        <select id="dropdown" class="select" name="dropdown">
           <option value="">(select an option)</option>
           <option value="1">Yes</option>
             <option value="2">No</option>
         </select>
-        <label for="dietary-requirements">Please specify any dietary requirements:<textarea id="dietary-requirements" name="dietary-requirements" rows="3" cols="30" placeholder="I am allergic to..."></textarea></label>            
+        <label for="dietary-requirements">Please specify any dietary requirements:</label><textarea id="dietary-requirements" name="dietary-requirements" rows="3" cols="30" placeholder="I am allergic to..."></textarea>          
         </fieldset>
               <fieldset>
-              <legend>Which office are you based at:</legend>
-<label for="donwton-office"><input id="downton-office" type="radio" name="office-name" class="inline" checked/> Downton</label>
-<label for="fordingbridge-office"><input id="fordingbridge-office" type="radio" name="office-name" class="inline" /> Fordingbridge</label>
+              <label>Which office are you based at:</label>
+<label for="downton-office"><input id="downton-office" type="radio" value="downton" name="office-name" class="inline" checked/> Downton</label>
+<label for="fordingbridge-office"><input id="fordingbridge-office" type="radio" value="fordingbridge" name="office-name" class="inline" /> Fordingbridge</label>
 </fieldset>
 <fieldset>
-  <legend>What are you going to order from the menu? (You can select all of them! We are not judging)</legend>
-  <input id="starter" type="checkbox" name="starter" value="starter" checked><label for="starter">Starter</label>
-  <input id="main" type="checkbox" name="main" value="main"><label for="main">Main</label>
-  <input id="dessert" type="checkbox" name="dessert" value="dessert"><label for="dessert">Dessert</label>
-  <button type="submit">Submit</button>
+  <label>What are you going to order from the menu? (You can select all of them! We are not judging)</label>
+  <label for="starter"><input id="starter" class="input-checkbox" type="checkbox" name="starter" value="starter">Starter</label>
+  <label for="main"><input id="main" class="input-checkbox" type="checkbox" name="main" value="main">Main</label>
+  <label for="dessert"><input id="dessert" class="input-checkbox" type="checkbox" name="dessert" value="dessert">Dessert</label>
+  <button type="submit" class="submit-button" id="submit">Submit</button>
+  </fieldset>
         </form>
 </main>
+</div>
 </body>
 </html>
